# 0g-aiarena

./: .env.example  .gitignore  0G-AIARENA_Context.md  README.md  ROADMAP.md  a  docker-compose.override.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  setup.ps1  setup.sh  start-dev.ps1  todo-tasks.md  tsconfig.base.json  turbo.json
apps/web/: .env.local  .env.local.example  README.md  next.config.js  package.json  tailwind.config.ts  tsconfig.json
archive/solana-vault-stack/: deploy-vault-base.ts
contracts/evm/: AIArenaINFT_clean.sol  AIArenaINFT_flat.sol  AIArenaINFT_metadata.json  AIArenaINFT_standard_input.json  README.md  hardhat.config.ts  package.json  tsconfig.json
contracts/solana/: Anchor.toml  deploy-devnet.sh
contracts/solana/agent-wallet/: Cargo.toml
contracts/solana/agent-wallet/src/: lib.rs
contracts/solana/escrow-vault/: Cargo.toml
contracts/solana/escrow-vault/src/: lib.rs
docs/: AI_SYSTEMS.md  CONTRACTS.md  CONTRIBUTING.md  DEPLOYMENT.md  FRONTEND.md  INTEGRATION.md  RENDER_DEPLOY.md  arena_token_migration_knowledge.md
docs/api/: README.md  openapi.yaml
docs/architecture/: KULT_CORE_INTELLIGENCE_LAYER.md  README.md  okx_context.md
docs/league/: F1_LEAGUE_CONTEXT.md  F1_PREDICTION_ENGINE_PLAN.md  LEAGUE_SYSTEM_ARCHITECTURE.md
docs/okx/: README.md  agent-card.json  create-agent-endpoint.md  okx-memory.md  okx_context_full.md  pricing.md
docs/polymarket/: knowledge_polymarket.md
docs/sdk/: QUICKSTART.md  README.md
scripts/: init-reserve.mjs
token/: Anchor.toml  Cargo.toml
(+423 files in other folders)
